[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemy.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 50.0253

[sub_resource type="CircleShape2D" id=3]
radius = 47.5671

[sub_resource type="CircleShape2D" id=4]
radius = 53.748

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "Normal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 600, 0 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 60.792, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.241
autostart = true

[node name="Collision" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Collision"]
position = Vector2( 14, 0 )
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_shape_entered" from="Collision" to="." method="_on_Collision_body_shape_entered"]
[connection signal="body_shape_entered" from="Hitbox" to="." method="_on_Hitbox_body_shape_entered"]
